--- a/index.html
+++ b/index.html
@@ -514,9 +514,11 @@
                   <div data-aos="fade-up" data-aos-delay="100">
                     <h2 class="text-white">Hi I'm Jed</h2>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Dolor aperiam a velit. Harum eligendi quod reiciendis quos
-                      ullam libero est dolor,
+                      Lagnesh Kumaar photographer considered a master of candid
+                      photography, and an early user of 35 mm film. He pioneered
+                      the genre of street photography, and viewed photography as
+                      capturing a decisive moment. Cartier-Bresson was one of
+                      the founding members of Magnum Photos in 21 Century
                       <a href="#">corporis dolores assumenda</a>, delectus,
                       quidem voluptatibus dolorum temporibus enim!
                     </p>
